implement create functionality

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cat Collector</title>
+  <title>Coins Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
@@ -15,11 +15,14 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;CatCollector</a></li>
+          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Coins Collector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/coins">View All My Coins</a></li>
+          <!-- <li><a href="/about">About</a></li> Line below is the Django WAY-->
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'coins_create' %}">Add a Coins</a></li>
+          <!-- <li><a href="/coins">View All My Coins</a></li> -->
+          <li><a href="{% url 'index' %}">View All My Coins</a></li>
         </ul>
       </div>
     </nav>
