--- a/main_app/templates/coins/index.html
+++ b/main_app/templates/coins/index.html
@@ -5,9 +5,9 @@
 
 {% for coin in coins %}
 <!-- line below to implement Details Page-->
-<!-- <a href="/coins/{{ coin.id }}"> -->
-<!-- the line below replace the "hardcoded" one above and 'detail' referes to urlpatterns -->
 <a href="{% url 'detail' coin.id %}">
+<!-- <a href="/coins/{{ coin.id }}"> -->
+<!-- the line 9 replace the "hardcoded" one above and 'detail' referes to urlpatterns -->
   <div class="card">
     <div class="card-content">
       <span class="card-title">{{ coin.material }}</span>
