--- a/main_app/templates/main_app/coin_form.html
+++ b/main_app/templates/main_app/coin_form.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+{% if object %}
+    <h1>Edit <span class="teal-text">{{object.country}}</span></h1>
+{% else %}
+    <h1>Add Coin</h1>
+{% endif %}
+
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
   <form action="" method="post">
     <!-- Django requires the following for security purposes -->
