--- a/main_app/templates/coins/detail.html
+++ b/main_app/templates/coins/detail.html
@@ -3,20 +3,38 @@
 
 <h1>Coin Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ coin.material }}</span>
-    <p>Country: {{ coin.country }}</p>
-    <p>Century: {{ coin.century }}</p>
-    <p>Description: {{ coin.description }}</p>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ coin.material }}</span>
+        <p>Country: {{ coin.country }}</p>
+        <p>Century: {{ coin.century }}</p>
+        <p>Description: {{ coin.description }}</p>
+      </div>
+      <!-- adding links in accordiance with the routes -->
+      <div class="card-action">
+        <a href="{% url 'coins_update' coin.id %}">Edit</a>
+        <a href="{% url 'coins_delete' coin.id %}">Delete</a>
+      </div>
+    </div>
   </div>
- <!-- adding links in accordiance with the routes -->
-  <div class="card-action">
-    <a href="{% url 'coins_update' coin.id %}">Edit</a>
-    <a href="{% url 'coins_delete' coin.id %}">Delete</a>
+
+  <div class="col s6">
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Deal</th></tr>
+      </thead>
+      <tbody>
+        {% for trading in coin.trading_set.all %}
+          <tr>
+            <td>{{trading.date}}</td>
+            <td>{{trading.get_deal_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 
-
-</div>
-
+</div> 
 {% endblock %}
