--- a/main_app/templates/coins/detail.html
+++ b/main_app/templates/coins/detail.html
@@ -22,12 +22,11 @@
 
   <div class="col s6">
       <!-- displaying new TraidingForm -->
-      <form method="post">
+      <form action="{% url 'add_trading' coin.id %}" method="post">
         {% csrf_token %}
         {{ trading_form.as_p }}
         <input type="submit" class="btn" value="Add Trading">
       </form>
-
     <table class="striped">
       <thead>
         <tr><th>Date</th><th>Deal</th></tr>
@@ -44,4 +43,19 @@
   </div>
 
 </div> 
+
+<script>
+
+  const dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+
+  const selectEl = document.getElementById('id_deal');
+  M.FormSelect.init(selectEl);
+
+</script>
 {% endblock %}
