complete User Authentication. Add ununassoc expo

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,11 +21,17 @@
         <ul class="right">
           <!-- <li><a href="/about">About</a></li> Line below is the Django WAY-->
           <li><a href="{% url 'about' %}">About</a></li>
+          {% if user.is_authenticated %}
           <li><a href="{% url 'expos_create' %}">Add a Exhibition</a></li>
           <li><a href="{% url 'expos_index' %}">View All Exhibitions</a></li>
           <li><a href="{% url 'coins_create' %}">Add a Coins</a></li>
           <!-- <li><a href="/coins">View All My Coins</a></li> -->
           <li><a href="{% url 'index' %}">View All My Coins</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
+             {% else %}
+          <li><a href="{% url 'signup' %}">Sign Up</a></li>
+          <li><a href="{% url 'login' %}">Log In</a></li>
+            {% endif %}
         </ul>
       </div>
     </nav>
